--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,17 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
-    <meta name="description" content="Web site created using create-react-app"/>
-    <title>#Proka - магазин пивных радостей</title>
+    <meta name="description" content="Магазин пивных радостей #Probka открыт и ждет вас в гости по адресу c.Кочубеевское ул.Титова 49 с 10:00 до 22:00. Без перерывов. Без выходных."/>
+    <meta name="robots" content="index">
+    <meta name="keywords" content="пиво в Кочубеевском,кочубеевское пиво,кочубеевское предзаказ пива,предзаказ пива,кочубеевское вкусное пиво">
+    <title>#Probka - магазин пивных радостей</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
 <script src="/build/index.bundle.js"></script>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/solid.css" integrity="sha384-TN9eFVoW87zV3Q7PfVXNZFuCwsmMwkuOTOUsyESfMS9uwDTf7yrxXH78rsXT3xf0" crossorigin="anonymous">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/brands.css" integrity="sha384-MiOGyNsVTeSVUjE9q/52dpdZjrr7yQAjVRUs23Bir5NhrTq0YA0rny4u/qe4dxNj" crossorigin="anonymous">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/fontawesome.css" integrity="sha384-PRy/NDAXVTUcXlWA3voA+JO/UMtzWgsYuwMxjuu6DfFPgzJpciUiPwgsvp48fl3p" crossorigin="anonymous">
 </body>
 </html>
